--- a/test/index.html
+++ b/test/index.html
@@ -8,17 +8,62 @@
 
     <link rel="stylesheet" type="text/css" href="css/app.min.css">
 </head>
-<body>
+<body id="home">
     <div id="wrapper">
         <header id="header">
-            <h1 id="header-title">AppCore Test Page</h1>
+            <h1 id="header-title">AppCore Tests - Event Guest List Sample</h1>
         </header>
         <div id="content">
-            <section class="section">
+            <section id="form" class="section hidden">
+                <h2 id="form-title">Add Guest</h2>
                 <div class="input-field">
-                    <label class="input-label">Text Input</label>
-                    <input id="input-text" class="input-text" type="text" />
+                    <label class="input-label" for="form-name">Name</label>
+                    <input id="form-name" class="input-text" type="text" />
                 </div>
+                <div class="input-field">
+                    <label class="input-label" for="form-category">Category</label>
+                    <select id="form-category" class="input-select">
+                        <option value="0">Normal</option>
+                        <option value="1">VIP</option>
+                    </select>
+                </div>
+                <div class="input-field">
+                    <label class="input-label" for="form-status">Confirmation Status</label>
+                    <input id="form-status" class="input-checkbox" type="checkbox"><label class="input-checkbox-label" for="form-status">Confirmed</label>
+                </div>
+                <div class="input-field">
+                    <button id="form-submit" class="input-button input-button-submit" type="submit">Save</button>
+                    <button id="form-cancel" class="input-button" type="submit">Cancel</button>
+                </div>
+            </section>
+            <section id="index" class="section">
+                <h2>Current Guests</h2>
+                <table class="datatable">
+                    <thead>
+                        <tr class="datatable-header">
+                            <th class="datatable-header-label">Name</th>
+                            <th id="datatable-header-label-category" class="datatable-header-label">Category</td>
+                            <th id="datatable-header-label-status"class="datatable-header-label">Confirmed</th>
+                            <th id="datatable-header-label-actions" class="datatable-header-label">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr id="sample" class="datatable-row">
+                            <td><span id="sample-name"></span></td>
+                            <td><span id="sample-category"></span></td>
+                            <td><input id="sample-confirmed" class="input-checkbox" type="checkbox" /></td>
+                            <td>
+                                <button class="input-button input-button-action">Edit</button>
+                                <button class="input-button input-button-action">Delete</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr class="datatable-footer">
+                            <td class="datatable-footer-summary" colspan="4">Loading...</td>
+                        </tr>
+                    </tfoot>
+                </table>
             </section>
         </div>
         <footer id="footer">
