--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
             <h1 id="header-title">AppCore Tests - Event Guest List Sample</h1>
         </header>
         <div id="content">
-            <section id="form" class="section hidden">
+            <section id="form" class="section">
                 <h2 id="form-title">Add Guest</h2>
                 <div class="input-field">
                     <label class="input-label" for="form-name">Name</label>
@@ -28,8 +28,8 @@
                     </select>
                 </div>
                 <div class="input-field">
-                    <label class="input-label" for="form-status">Confirmation Status</label>
-                    <input id="form-status" class="input-checkbox" type="checkbox"><label class="input-checkbox-label" for="form-status">Confirmed</label>
+                    <label class="input-label" for="form-confirmed">Confirmation Status</label>
+                    <input id="form-confirmed" class="input-checkbox" type="checkbox"><label class="input-checkbox-label" for="form-confirmed">Confirmed</label>
                 </div>
                 <div class="input-field">
                     <button id="form-submit" class="input-button input-button-submit" type="submit">Save</button>
