Test: updated BlanketJS configuration flags.

--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 
         <script src="dependencies/mocha/mocha.js"></script>
         <script src="dependencies/requirejs/require.js" data-main="app.js"></script>
-        <script src="dependencies/blanket/blanket.js" data-cover-only="../src/"></script>
+        <script src="dependencies/blanket/blanket.js" data-cover-only="../src/" data-cover-flags="ignoreError"></script>
         <script src="dependencies/grunt-blanket-mocha/support/mocha-blanket.js"></script>
 
         <script>
