Test: added test element.

--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="dependencies/mocha/mocha.css" />
     </head>
     <body>
+        <div id="test"></div>
         <div id="mocha"></div>
 
         <script src="dependencies/mocha/mocha.js"></script>
